# odoc-tmp

./: .gitignore  Makefile  README.md  go.mod  go.sum  package.json  pyproject.toml
proto/: .gitignore  Makefile  MakefileForWindows  README.md  check_ts_plugin.bat  delete_windows_local_config.bat  fix_py_imports.py  gen_windows_local_web_config.bat  go.mod  move_go_files.bat  move_local_go_files.bat  move_local_ts_files.bat  move_ts_files.bat  package.json  pyproject.toml
proto/.github/workflows/: ci.yml
proto/definitions/common/: AnnotateTag.proto  AnnotationPointer.proto  Base.proto  CommentatorInfoView.proto  Common.proto  DrawShapeType.proto  IDEAAnnotateType.proto  PdfMarkTagInfo.proto  Point.proto  RectOptions.proto  ShapeAnnotation.proto
proto/definitions/copilot/: CustomQuestion.proto
proto/definitions/doc/: CSL.proto  ClientDoc.proto  DocCiteSearch.proto  UserDoc.proto  UserDocFolder.proto  UserDocManage.proto  UserDocParsedStatus.proto  UserDocPublic.proto
proto/definitions/lang/: Language.proto
proto/definitions/membership/: MembershipApi.proto
proto/definitions/nav/: Website.proto
proto/definitions/note/: AnnotateTextBox.proto  AnnotationRawModel.proto  NoteDrawEntity.proto  NoteExportHistory.proto  NoteLatestRead.proto  NoteManage.proto  NoteReadLocation.proto  NoteShape.proto  NoteSummary.proto  NoteWord.proto  PaperNote.proto  PaperNoteAnnotateTag.proto  Web.proto
proto/definitions/oauth2/: OAuth2.proto
proto/definitions/order/: OrderApi.proto
proto/definitions/oss/: OSS.proto  (+1 more)
web/src-tauri/: Cargo.toml  tauri.conf.json
(+1254 files in other folders)
