[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "go-sea-proto"
version = "0.0.142"
description = "Protocol Buffers definitions for go-sea"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "protobuf>=4.21.0",
    "grpcio>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.50.0",
]

[tool.setuptools.packages.find]
where = ["gen/py"]

[tool.setuptools.package-dir]
"" = "gen/py"
